--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ html {
   background-color: gwhite;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Source Sans 3", sans-serif;
 }
