--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,16 @@ body {
   font-family: "Source Sans 3", sans-serif;
   font-size: 1.15rem;
   color: #9f9f9f;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.pet-filter button:hover {
+  color: #7d7d7d;
+}
+
+.pet-filter .active {
+  color: #475AFF
 }
 
 .site-footer {
